# NovaLSM

./: .gitignore  CMakeLists.txt  README.md  RocksDBConfig.cmake  RocksDBConfigVersion.cmake  build.sh  build_version.cc  memory_leak.cpp  rocksdb.cbp
bench/: bench_common.h  mock_rtable.cpp  mock_rtable.h  rdma_write_client.cpp  rdma_write_client.h  rdma_write_server_worker.cpp  rdma_write_server_worker.h  scatter_bench.cpp
bench_memtable/: memtable_bench.cpp  memtable_worker.cpp  memtable_worker.h
benchmarks/: bench_common.h  db_bench.cc  db_bench_sqlite3.cc  db_bench_tree_db.cc  mock_rtable.cpp  mock_rtable.h  rdma_write_client.cpp  rdma_write_client.h  rdma_write_server_worker.cpp  rdma_write_server_worker.h  scatter_bench.cpp
cc/: db_compaction_thread.cpp  db_compaction_thread.h  nova_cc.cpp  nova_cc.h  nova_cc_client.cpp  nova_cc_client.h  nova_cc_client_worker.cpp  nova_cc_client_worker.h  nova_cc_conn_worker.cpp  nova_cc_conn_worker.h  nova_cc_log_writer.cc  nova_cc_log_writer.h  nova_cc_nic_server.cpp  nova_cc_nic_server.h  nova_cc_server.cpp  nova_cc_server.h  nova_cc_stat_thread.cpp  nova_cc_stat_thread.h  nova_log_manager.cpp  nova_log_manager.h  nova_rdma_cc.cpp  nova_rdma_cc.h  nova_rtable.cpp  nova_rtable.h  nova_storage_worker.cpp  nova_storage_worker.h  rdma_admission_ctrl.cpp  rdma_admission_ctrl.h  storage_selector.cpp  storage_selector.h
common/: city_hash.cpp  city_hash.h  nova_chained_hashtable.h  nova_client_sock.cpp  nova_common.cpp  nova_common.h  nova_config.cc  nova_config.h  nova_console_logging.h  nova_mem_manager.cpp  nova_mem_manager.h
config/: nova-1-server-1-range-10000000  nova-1-server-1-range-100000000  nova-1-server-64-range-10000000  nova-1-server-64-range-100000000  nova-10-servers-1-range-100000000  nova-10-servers-1-range-1000000000  nova-10-servers-64-range-100000000  nova-2-server-1-range-50000000-ruihong  nova-debug-100000  nova-debug-1000000  nova-debug-1000000000  nova-elastic-nrecords-10000000-nltc-3-nstoc-5-nranges-64-zipfian-0.00-read-1  nova-elastic-nrecords-10000000-nltc-3-nstoc-7-nranges-64-zipfian-0.99-read-1  nova-init1-nrecords-10000000-nltc-3-nstoc-9-nranges-64-zipfian-0.00-read-1  nova-migration-nrecords-10000000-nltc-3-nstoc-1-nranges-16-zipfian-0.99  nova-migration-nrecords-10000000-nltc-5-nstoc-10-nranges-64-zipfian-0.27  nova-migration-nrecords-10000000-nltc-5-nstoc-10-nranges-64-zipfian-0.27-read-1  nova-migration-nrecords-10000000-nltc-5-nstoc-10-nranges-64-zipfian-0.27-read-10  nova-migration-nrecords-10000000-nltc-5-nstoc-10-nranges-64-zipfian-0.73  nova-migration-nrecords-10000000-nltc-5-nstoc-10-nranges-64-zipfian-0.73-read-1  nova-migration-nrecords-10000000-nltc-5-nstoc-10-nranges-64-zipfian-0.73-read-10  nova-migration-nrecords-10000000-nltc-5-nstoc-10-nranges-64-zipfian-0.99  nova-migration-nrecords-10000000-nltc-5-nstoc-10-nranges-64-zipfian-0.99-read-1  nova-migration-nrecords-10000000-nltc-5-nstoc-10-nranges-64-zipfian-0.99-read-10  nova-shared-nrecords-10000-nltc-1-nstoc-1-nranges-1-zipfian-0.00-read-1  nova-shared-nrecords-100000-nltc-1-nstoc-1-nranges-1-zipfian-0.00-read-1  nova-shared-nrecords-1000000-nltc-1-nstoc-10-nranges-1-zipfian-0.00-read-1  nova-shared-nrecords-10000000-nltc-1-nstoc-10-nranges-1-zipfian-0.00-read-1  nova-shared-nrecords-10000000-nltc-5-nstoc-10-nranges-1-zipfian-0.00-read-1  nova-shared-nrecords-100000000-nltc-10-nstoc-10-nranges-1-zipfian-0.00-read-1  nova-shared-nrecords-1000000000-nltc-1-nstoc-10-nranges-1-zipfian-0.00-read-1  nova-shared-nrecords-1000000000-nltc-10-nstoc-10-nranges-64-zipfian-0.00-read-1  nova-simpleelastic-nrecords-1000000-nltc-2-nstoc-2-nranges-16-zipfian-0.99  nova-simpleelastic-nrecords-10000000-nltc-2-nstoc-2-nranges-16-zipfian-0.99-read-1  nova-simpleelastic-nrecords-10000000-nltc-2-nstoc-2-nranges-64-zipfian-0.99  nova-workloada-nrecords-10000000-nltc-1-nstoc-3-nranges-64-zipfian-0.00-read-1  nova-workloada-nrecords-10000000-nltc-1-nstoc-4-nranges-1-zipfian-0.00-read-1  nova-workloada-nrecords-10000000-nltc-1-nstoc-4-nranges-64-zipfian-0.00-read-1  nova-workloada-nrecords-10000000-nltc-2-nstoc-6-nranges-64-zipfian-0.00-read-1  nova-workloada-nrecords-10000000-nltc-3-nstoc-6-nranges-64-zipfian-0.00-read-1  (+7 more)
db/: autocompact_test.cc  builder.cc  builder.h  c.cc  compaction.cc  compaction.cpp  compaction.h  corruption_test.cc  db_impl.cc  db_impl.h  db_iter.cc  db_iter.h  db_test.cc  dbformat.cc  dbformat.h  dbformat_test.cc  dumpfile.cc  fault_injection_test.cc  filename.cc  filename.h  filename_test.cc  flush_order.cpp  flush_order.h  leveldbutil.cc  log_format.h  log_reader.cc  log_reader.h  log_test.cc  log_writer.cc  log_writer.h  lookup_index.cpp  lookup_index.h  memtable.cc  memtable.h  range_index.cpp  range_index.h  recovery_test.cc  repair.cc  skiplist.h  skiplist_test.cc  (+17 more)
dc/: dc.cpp  dc.h  dc_client.cpp  dc_client.h  nova_dc.cpp  nova_dc.h  nova_dc_client.cpp  nova_dc_client.h  nova_dc_server.cpp  nova_dc_server.h  nova_rdma_dc.cpp  nova_rdma_dc.h  rdma_dc.cpp  rdma_dc.h
issues/: issue178_test.cc  issue200_test.cc  issue320_test.cc
log/: log_recovery.cpp  log_recovery.h  logc_log_writer.cc  logc_log_writer.h  nic_log_writer.cpp  nic_log_writer.h  nova_in_memory_log_manager.cpp  nova_in_memory_log_manager.h  nova_log.cpp  nova_log.h  rdma_log_writer.cc  rdma_log_writer.h  stoc_log_manager.cpp  stoc_log_manager.h
logging/: logging.h
ltc/: compaction_thread.cpp  compaction_thread.h  db_helper.cpp  db_helper.h  db_migration.cpp  db_migration.h  destination_migration.cpp  destination_migration.h  rdma_write_handler.cpp  rdma_write_handler.h  source_migration.cpp  source_migration.h  stat_thread.cpp  stat_thread.h  stoc_client_impl.cpp  (+5 more)
mc/: mc.cpp  (+11 more)
ycsb/: CMakeLists.txt  YCSB_C.cbp  basic_db.h  build.sh  client.h  const_generator.h  core_workload.cc  core_workload.h  db.h  db_factory.cc  db_factory.h  discrete_generator.h  logging.h  nova_mem_client_db.cc  nova_mem_client_db.h  properties.h  skewed_latest_generator.h  timer.h  utils.h  ycsbc.cc  zipfian_generator.h
ycsb/workloads/: workloada.spec  workloadb.spec  workloadc.spec
(+266 files in other folders)
